# winui-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
crates/winui/: Cargo.toml
crates/winui-build/: Cargo.toml
crates/winui-build/src/: lib.rs
crates/winui-sys/: Cargo.toml
crates/winui-sys/src/: bootstrap.rs  lib.rs  version.rs  xaml.rs
crates/winui-sys/src/wrapper/: bootstrap.h  version.h  xaml.h
crates/winui/src/: lib.rs
example/: Cargo.toml  build.rs
example/src/: main.rs
src/wrapper/: bootstrap.h
winui-test/: Cargo.toml  build.rs
winui-test/src/: main.rs
