[package]
name = "winui"
version = "0.1.0"
edition = "2021"
authors = ["Luca Lewin <contact@lucalewin.dev>"]

[dependencies]
winui-sys = { path = "../winui-sys" }

# [dependencies.windows]
# version = "0.37"

# [dependencies.windows-app]
# git = "https://github.com/microsoft/windows-app-rs"
# features = [
#     "WindowsAppSdk_Foundation",
#     "Windows_System_Power"
# ]
